fix(AVO-3298): use perfect scrollbar everywhere (dedupe deps)
https://meemoo.atlassian.net/browse/AVO-3298

also fix hero video player background transparent
extract translations

--- a/ui/src/react-admin/modules/content-page/components/blocks/BlockHero/BlockHero.scss
+++ b/ui/src/react-admin/modules/content-page/components/blocks/BlockHero/BlockHero.scss
@@ -16,7 +16,12 @@
 	}
 
 	.c-video-player {
-		background-color: #18242a;
+		background-color: transparent;
+
+		// Avoid ugly black stripes on the /leerlingen page
+		.c-video-player-inner {
+			background-color: transparent;
+		}
 	}
 }
 
